--- a/grafico_barra.html
+++ b/grafico_barra.html
@@ -3,11 +3,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript" src="./dados.js"></script>
-        <script type="text/javascript" src="./grafico_linha.js"> </script>
+        <script type="text/javascript" src="./barra.js"> </script>
         <link rel="stylesheet" type="text/css" href="tabela.css">
     </head>
     <body>
-        <div id="linechart_material" style="width: 900px; height: 500px"></div>
+        <div id="chart_div" style="width: 900px; height: 500px"></div>
         <div>
             <h3>Tabela com os dados </h3>
             <table id="tabela" bac>
